[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ky-damage-agent"
version = "0.1.0"
description = "Kentucky Disaster Situational Awareness AI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ky_damage_agent.frontend" = ["templates/*.html"]

[project.scripts]
ky-damage-agent = "ky_damage_agent.frontend.app:main"
